test/kubernetes/e2e/features/auto_host_rewrite/input/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-route
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-system
  hostnames:
    - "foo.local"
  rules:
    - backendRefs:
        - name: echo
          port: 80
