test/kubernetes/e2e/features/auto_host_rewrite/input/invalid_trafficpolicy.yaml
apiVersion: trafficpolicy.kgateway.io/v1alpha1
kind: TrafficPolicy
metadata:
  name: bad-policy
spec:
  targetRef:
    group: ""
    kind: Service
    name: echo
    namespace: auto-host-rewrite-invalid
  hostRewrite: "somehost.local"
  autoHostRewrite: true
