test/kubernetes/e2e/features/auto_host_rewrite/input/trafficpolicy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: echo-policy
  namespace: auto-host-rewrite
spec:
  targetRef:
    group: ""
    kind: Service
    name: echo
    namespace: auto-host-rewrite
  autoHostRewrite: true
